--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 /New Folder/coinToss/build/
 /coin-toss/coinToss/build/
 /coin-toss/coinToss/nbproject/private/
+/New Folder/GuessTheNumber/nbproject/private/
+/New Folder/GuessTheNumber/build/
+/New Folder/GuessTheNumber/dist/
