--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 /New Folder/GuessTheNumber/nbproject/private/
 /New Folder/GuessTheNumber/build/
 /New Folder/GuessTheNumber/dist/
+/guess-the-number/GuessTheNumber/build/
+/guess-the-number/GuessTheNumber/dist/
+/guess-the-number/GuessTheNumber/nbproject/private/
