--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@
 /guess-the-number/GuessTheNumber/build/
 /guess-the-number/GuessTheNumber/dist/
 /guess-the-number/GuessTheNumber/nbproject/private/
+/person/JavaApplication7/nbproject/private/
+/person/person/nbproject/private/
+/person/person/build/
