--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@
 /person/JavaApplication7/nbproject/private/
 /person/person/nbproject/private/
 /person/person/build/
+/loops-practice/loops/nbproject/private/
+/loops-practice/loops/build/
+/madlibs/madlibs/nbproject/private/
+/madlibs/madlibs/build/
