--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@
 /loops-practice/loops/build/
 /madlibs/madlibs/nbproject/private/
 /madlibs/madlibs/build/
+/madlibs/even-odd-letters/nbproject/private/
+/odd-even-strings/odd-even-strings/nbproject/private/
