--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@
 /madlibs/madlibs/build/
 /madlibs/even-odd-letters/nbproject/private/
 /odd-even-strings/odd-even-strings/nbproject/private/
+/odd-even-strings/odd-even-strings/build/
