--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@
 /madlibs/even-odd-letters/nbproject/private/
 /odd-even-strings/odd-even-strings/nbproject/private/
 /odd-even-strings/odd-even-strings/build/
+/odd-even-obb/odd-even-obb/nbproject/private/
