--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,7 @@
 /odd-even-strings/odd-even-strings/nbproject/private/
 /odd-even-strings/odd-even-strings/build/
 /odd-even-obb/odd-even-obb/nbproject/private/
+/arrays/nbproject/private/
+/arrays/build/
+/dictionaryPractice/nbproject/private/
+/dictionaryPractice/build/
