--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@
 /arrays/build/
 /dictionaryPractice/nbproject/private/
 /dictionaryPractice/build/
+/RecursionPractice/nbproject/private/
+/RecursionPractice/build/
